fix search logic. now country is visible when clicked

--- a/css/details.css
+++ b/css/details.css
@@ -18,6 +18,23 @@ body {
 
 .country-details {
   width: 100%;
+  /*max-width: 1240px;*/
+  margin: 20px auto;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 20px;
+}
+.country-div{
+  background: #88cdea;
+  border: 1px solid burlywood;
+  padding: 15px;
+}
+
+.country-details img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 5px;
 }
 
 @media (min-width: 64em) {
